# hotchocolate-federation-rust-integration-demo

./: .gitignore  readme.md
accounts/: Accounts.csproj  Startup.cs  appsettings.json
gateway/: Startup.cs
inventory/: Startup.cs  appsettings.json
products/: Startup.cs  appsettings.json
reviews/: Reviews.csproj  Startup.cs  appsettings.json
reviews_rust/: Cargo.toml
reviews_rust/src/: Stitching.graphql  main.rs
