[package]
name = "reviews_rust"
version = "0.1.0"
authors = ["tobi <mail@singhania.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.5.14", default-features = false }

async-graphql-warp = "2"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
warp = "0.3"